Fix Android-compatible transcript reading